--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+     <html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -9,11 +9,15 @@
     #myProgress {
       width: 100%;
       background-color: #ddd;
+      position: absolute;
+      width: 200px;
+      height: 20px;
+      margin: 10px;
     }
 
     #myBar {
       width: 100%;
-      height: 30px;
+      height: 20px;
       background-color: #4CAF50;
     }
   </style>
