--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hill</title>
   <style>
+    canvas {
+      display: block;
+      position: relative;
+      margin: auto;
+    }
+
+    #ui {
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 1em auto;
+      width: max-content;
+      z-index: 10;
+    }
+
     #myProgress {
       width: 100%;
       background-color: #ddd;
-      position: absolute;
-      width: 200px;
+      width: 10em;
       height: 20px;
-      margin: 1em;
+      display: inline-block;
     }
 
     #myBar {
@@ -22,20 +36,21 @@
     }
 
     #coins {
-    position: absolute;
-    margin-top: .5em;
-    margin-left: 230px;
-    font-family: sans-serif;
-    color: gold;
-    font-size: 1.5em;
-}
+      margin-left: .5em;
+      font-family: sans-serif;
+      color: gold;
+      font-size: 1.5em;
+      display: inline;
+    }
   </style>
 </head>
 
 <body>
-  <div id="coins">0</div>
-  <div id="myProgress">
-    <div id="myBar"></div>
+  <div id="ui">
+    <div id="myProgress">
+      <div id="myBar"></div>
+    </div>
+    <div id="coins">0</div>
   </div>
   <script src="decomp.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"
